--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ wayland-client = { version = "0.30.0-beta.8", optional = true }
 wayland-server = { version = "0.30.0-beta.8", optional = true }
 bitflags = "1.0"
 
+[dev-dependencies]
+png = "0.17.5"
+smithay = { git = "https://github.com/Smithay/smithay" }
+
 [features]
 default = ["client", "server"]
 client = ["wayland-client", "wayland-protocols/client"]
