--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,15 @@ wayland-server = { version = "0.30.0-beta.10", optional = true }
 bitflags = "1.0"
 
 [dev-dependencies]
+async-channel = "1.7.1"
+async-io = "1.9.0"
+env_logger = "0.9.1"
+gdk-pixbuf = "0.15.11"
+gtk4 = { version = "0.4.8" }
+gdk4-wayland = { version = "0.4.8", features = ["wayland_crate"] }
 png = "0.17.5"
-smithay = { git = "https://github.com/Smithay/smithay", rev = "625cbca5", default-features = false, features = ["backend_drm", "backend_egl", "renderer_gl", "renderer_multi"] }
+smithay = { git = "https://github.com/Smithay/smithay", rev = "625cbca5", default-features = false, features = ["backend_drm", "backend_egl", "backend_gbm", "renderer_gl", "renderer_multi", "slog-stdlog"] }
+wayland-backend = { version = "0.1.0-beta.10", features = ["client_system"] }
 
 [features]
 default = ["client", "server"]
