--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ gdk4-wayland = { version = "0.4.8", features = ["wayland_crate"] }
 png = "0.17.5"
 smithay = { git = "https://github.com/Smithay/smithay", rev = "625cbca5", default-features = false, features = ["backend_drm", "backend_egl", "backend_gbm", "renderer_gl", "renderer_multi", "slog-stdlog"] }
 wayland-backend = { version = "0.1.0-beta.10", features = ["client_system"] }
+memfd = "0.6.1"
 
 [features]
 default = ["client", "server"]
