--- a/client-toolkit/Cargo.toml
+++ b/client-toolkit/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 cosmic-protocols = { path = "../" }
-sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit", rev = "73346019952f82ec7e4d4d15f5d66841b54e8b61" }
-wayland-client = { version = "0.30.0-beta.14" }
-smithay = { git = "https://github.com/Smithay/smithay", rev = "bcc4ee38b8936f57907c844a5e92cf6c0d7325e3", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi", "slog-stdlog"], optional = true }
+sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit", rev = "a257bf7" }
+wayland-client = { version = "0.30.0" }
+smithay = { git = "https://github.com/Smithay/smithay", rev = "c85e1e5", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi", "slog-stdlog"], optional = true }
 
 [build-dependencies]
 gl_generator = { version = "0.14.0", optional = true }
@@ -18,13 +18,13 @@ cascade = "1"
 env_logger = "0.9.1"
 gdk-pixbuf = "0.15.11"
 glow = "0.11.2"
-glutin = "0.30.0-beta.3"
+glutin = "0.30.0"
 gtk4 = { version = "0.4.8", features = ["v4_6"] }
 gdk4-wayland = { version = "0.4.8", features = ["wayland_crate", "v4_4", "egl"] }
 iced = { version = "0.5.2", features = ["image"] }
 nix = "0.25.0"
 raw-window-handle = "0.5.0"
-wayland-backend = { version = "0.1.0-beta.14", features = ["client_system"] }
+wayland-backend = { version = "0.1.0", features = ["client_system"] }
 winit = "0.27.4"
 
 [features]
