--- a/client-toolkit/Cargo.toml
+++ b/client-toolkit/Cargo.toml
@@ -28,7 +28,7 @@ wayland-backend = { version = "0.1.0", features = ["client_system"] }
 winit = "0.27.4"
 
 [features]
-default = ["gl", "smithay"]
+default = []
 gl = ["gl_generator"]
 
 [[example]]
