--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 wayland-scanner = "0.30.0"
 wayland-backend = "0.1.0"
 wayland-protocols = "0.30.0"
-wayland-client = { version = "0.30.0", optional = true }
+wayland-client = { version = "0.30.1", optional = true }
 wayland-server = { version = "0.30.0", optional = true }
 bitflags = "1.0"
 
@@ -24,7 +24,7 @@ async-channel = "1.7.1"
 cascade = "1"
 env_logger = "0.9.1"
 png = "0.17.5"
-smithay = { git = "https://github.com/Smithay/smithay", rev = "c85e1e5", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi", "slog-stdlog"] }
+smithay = { git = "https://github.com/Smithay/smithay", rev = "c35bc3e", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi"]}
 wayland-backend = { version = "0.1.0", features = ["client_system"] }
 memfd = "0.6.1"
 
