--- a/client-toolkit/Cargo.toml
+++ b/client-toolkit/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 cosmic-protocols = { path = "../" }
-sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit", rev = "63e5026" }
-wayland-client = { version = "0.30.0" }
-smithay = { git = "https://github.com/Smithay/smithay", rev = "c85e1e5", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi", "slog-stdlog"], optional = true }
+sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit", rev = "389a4f2" }
+wayland-client = { version = "0.30.1" }
+smithay = { git = "https://github.com/Smithay/smithay", rev = "c35bc3e", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi"], optional = true }
 
 [build-dependencies]
 gl_generator = { version = "0.14.0", optional = true }
