--- a/client-toolkit/Cargo.toml
+++ b/client-toolkit/Cargo.toml
@@ -8,6 +8,7 @@ cosmic-protocols = { path = "../" }
 sctk = { package = "smithay-client-toolkit", git = "https://github.com/smithay/client-toolkit", rev = "2e9bf9f" }
 wayland-client = { version = "0.31.1" }
 smithay = { git = "https://github.com/Smithay/smithay", rev = "c35bc3e", default-features = false, features = ["backend_egl", "renderer_gl", "renderer_multi"], optional = true }
+libc = "0.2.153"
 
 [build-dependencies]
 gl_generator = { version = "0.14.0", optional = true }
