--- a/client-toolkit/Cargo.toml
+++ b/client-toolkit/Cargo.toml
@@ -21,6 +21,7 @@ gdk-pixbuf = "0.18.0"
 glow = "0.12.0"
 iced = { version = "0.10.0", features = ["image"] }
 nix = { version = "0.27.0", features = ["fs"] }
+png = "0.17.5"
 raw-window-handle = "0.5.0"
 wayland-backend = { version = "0.3.2", features = ["client_system"] }
 winit = "0.28.0"
