chore: clarify GPL 3.0 license variant

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 documentation = "https://pop-os.github.io/cosmic-protocols/"
 repository = "https://github.com/pop-os/cosmic-protocols"
 authors = ["Victoria Brekenfeld <github@drakulix.de>"]
-license = "GPL-3.0"
+license = "GPL-3.0-only"
 keywords = ["wayland", "client", "server", "protocol", "extension"]
 description = "Generated API for the COSMIC wayland protocol extensions"
 categories = ["gui", "api-bindings"]
