--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Continuous Integration
 on:
   push:
     branches:
-    - main
+      - main
   pull_request:
 
 jobs:
@@ -11,30 +11,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
       - name: Setup Editorconfig
         uses: editorconfig-checker/action-editorconfig-checker@main
       - name: Editorconfig
         run: editorconfig-checker
       - name: Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
           override: true
-          profile: minimal
           components: rustfmt
-          default: true
       - name: Format
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+        run: cargo fmt --all -- --check
 
   c-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
       - name: System dependencies
         run: sudo apt-get update; sudo apt-get install -y wayland-protocols libexpat1-dev libffi-dev libxml2-dev ninja-build meson
       - name: Latest wayland-scanner
@@ -54,18 +49,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
       - name: Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
           override: true
-          profile: minimal
-          default: true
       - name: Cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
+        run: cargo check
 
   doc:
     runs-on: ubuntu-latest
@@ -73,21 +64,19 @@ jobs:
       - rust-check
     steps:
       - name: Checkout sources
-        uses: actions/checkout@v2
+        uses: actions/checkout@v5
       - name: Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
           override: true
       - name: Build Documentation
-        uses: actions-rs/cargo@v1
-        with:
-          command: doc
+        run: cargo doc
       - name: Setup index
         run: cp ./doc_index.html ./target/doc/index.html
       - name: Deploy
         if: ${{ github.event_name == 'push' }}
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./target/doc
