--- a/client-toolkit/Cargo.toml
+++ b/client-toolkit/Cargo.toml
@@ -1,30 +1,24 @@
 [package]
 name = "cosmic-client-toolkit"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 cosmic-protocols = { path = "../" }
-sctk = { package = "smithay-client-toolkit", version = "0.19.1" }
-wayland-client = { version = "0.31.1" }
-libc = "0.2.153"
-wayland-protocols = { version = "0.32.4", features = ["client", "staging"] }
-bitflags = "2.8.0"
+sctk = { package = "smithay-client-toolkit", version = "0.20.0" }
+wayland-client = { version = "0.31.11" }
+libc = "0.2.175"
+wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
+bitflags = "2.9.3"
 
 [dev-dependencies]
-futures = "0.3.24"
-cascade = "1"
-env_logger = "0.10.0"
-gdk-pixbuf = "0.18.0"
-glow = "0.12.0"
-iced = { version = "0.10.0", features = ["image"] }
-nix = { version = "0.27.0", features = ["fs"] }
-png = "0.17.5"
-raw-window-handle = "0.5.0"
-wayland-backend = { version = "0.3.2", features = ["client_system"] }
-winit = "0.28.0"
+png = "0.18.0"
+wayland-backend = { version = "0.3.11", features = ["client_system"] }
 gbm = "0.18.0"
-smithay = { version = "0.7.0", default-features = false, features = ["renderer_gl", "backend_drm"] }
+smithay = { version = "0.7.0", default-features = false, features = [
+    "renderer_gl",
+    "backend_drm",
+] }
 
 [features]
 default = []
